fixing spacing in signup form

--- a/src/component/Login.css
+++ b/src/component/Login.css
@@ -7,7 +7,7 @@
 }
 
 .paper {
-    margin-top: 20%;
+    margin-top: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,7 +16,7 @@
 
 .avatar {
     margin: 10px;
-    background: 00C4CC;
+    background: #00C4CC;
 }
 
 .form {
